<resources>
    <string name="app_name">Boomino</string>
    <string name="parent_button_text">Parent</string>
    <string name="child_button_text">Child</string>
    <string name="login_user_name">Username</string>
    <string name="user_name_place_holder">Username</string>
    <string name="login_pass_word">Password</string>
    <string name="pass_word_place_holder">Password</string>
    <string name="login_button_text">Login</string>
    <string name="empty_list_error">لیست خالیست !</string>
</resources>